wip: message broker

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
-# node nestjs api
-# PORT=3000
+# # api
+# PORT=3002
 # NODE_ENV=
 
-# postgres persistence
-# DB_HOST=postgres
-# DB_USERNAME=postgres
+# # postgres
+# DB_HOST=ms_checkout_db
+# DB_USERNAME=checkout_user
 # DB_PORT=5432
-# DB_PASSWORD=postgres
-# DB_NAME=postgres
+# DB_PASSWORD=checkout_password
+# DB_NAME=checkout_database
 # DB_DIALECT=postgres
 
-# redis memory cache
-# CACHE_HOST=redis
-# CACHE_PORT=6379
+# # rabbitmq
+# AMQP_USERNAME=admin
+# AMQP_PASSWORD=admin
+# AMQP_COOKIE=TRIBUFUSTACK
+# AMQP_PORT=5672
+# AMQP_HOST=rabbitmq
 
-# mercado pago payment integration
-# MP_URL=https://api.mercadopago.com
-# MP_CLIENT_SECRET='TEST-5115720587610886-010418-c53a30aeee07e161df5918fcb5fb680c-152047844'
-# MP_GRANT_TYPE='refresh_token'
-# MP_REFRESH_TOKEN='TG-659879899f59ca0001e6fe8b-152047844'
+# # microservices
+# CHECKIN_HOST=ms_checkin
+# CHECKIN_PORT=3001
