--- a/k8s/api-configmap.yaml
+++ b/k8s/api-configmap.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: api-configmap
+  name: ms-checkout-configmap
+  namespace: orderly
 data:
-  PORT: "3000"
+  PORT: "3002"
   NODE_ENV: "production"
   DB_HOST: "${DB_IP}" # db-service
   DB_USERNAME: "${DB_USERNAME}" # "postgres"
@@ -11,9 +12,12 @@ data:
   DB_PASSWORD: "${DB_PASSWORD}" # "postgres"
   DB_NAME: "${DB_NAME}" # postgres
   DB_DIALECT: postgres
-  CACHE_HOST: cache-service
-  CACHE_PORT: "6379"
-  MP_URL: "https://api.mercadopago.com"
-  MP_CLIENT_SECRET: "TEST-5115720587610886-010418-c53a30aeee07e161df5918fcb5fb680c-152047844"
-  MP_GRANT_TYPE: "refresh_token"
-  MP_REFRESH_TOKEN: "TG-659879899f59ca0001e6fe8b-152047844"
+
+  AMQP_USERNAME: "${BROKER_USER}" # admin
+  AMQP_PASSWORD: "${BROKER_PASSWORD}" # admin
+  AMQP_COOKIE: "TRIBUFUSTACK"
+  AMQP_PORT: "5672"
+  AMQP_HOST: broker-service
+
+  CHECKIN_HOST: ms-checkin-service
+  CHECKIN_PORT: "3001"
