--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -1,44 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-deployment
+  name: ms-checkout-deployment
+  namespace: orderly
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api
+      app: ms-checkout
   template:
     metadata:
       labels:
-        app: api
+        app: ms-checkout
     spec:
       containers:
-        - name: api-container
-          image: ${IMAGE_NAME}
-          workingDir: /usr/api
-          ports:
-            - containerPort: 3000
-          envFrom:
-            - configMapRef:
-                name: api-configmap
-          livenessProbe:
-            httpGet:
-              path: /orders
-              port: 3000
-            periodSeconds: 10 # perido de tempo para cada requisição
-            timeoutSeconds: 3 # tempo de espera por requisição
-            failureThreshold: 3 # quantidade de falhas para reiniciar
-            # initialDelaySeconds: # 20 demora para realizar primeira requisição
-          readinessProbe:
-            httpGet:
-              path: /orders
-              port: 3000
-            periodSeconds: 3
-            failureThreshold: 3
-            # initialDelaySeconds: 10
-          startupProbe:
-            httpGet:
-              path: /orders
-              port: 3000
-            periodSeconds: 5
-            failureThreshold: 30
+      - name: ms-checkout-container
+        image: dealmachine/checkout-api:1
+        workingDir: /usr/checkout/api
+        ports:
+        - containerPort: 3002
+        envFrom:
+        - configMapRef:
+            name: ms-checkout-configmap
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3002
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 3002
+          periodSeconds: 3
+          failureThreshold: 3
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 3002
+          periodSeconds: 5
+          failureThreshold: 30
